[gd_scene load_steps=5 format=3 uid="uid://ct06m6nwbyn5k"]

[ext_resource type="Script" uid="uid://dy8bn2cygy7ds" path="res://Shop.gd" id="1_c0ofq"]
[ext_resource type="Script" uid="uid://84whq0bed761" path="res://items/ui/PlayerInventoryView.gd" id="2_svtxo"]
[ext_resource type="Script" uid="uid://muut3gmsg30f" path="res://items/ui/ItemsDisplayContainer.gd" id="3_odqjv"]
[ext_resource type="Texture2D" uid="uid://bg87pigjk72d3" path="res://assets/icons/resources/coins.png" id="4_vdbi3"]

[node name="Shop" type="MarginContainer"]
visible = false
script = ExtResource("1_c0ofq")
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerItems" type="VBoxContainer" parent="HBoxContainer" node_paths=PackedStringArray("inventory_display_container")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_svtxo")
inventory_display_container = NodePath("ScrollContainer/MarginContainer/GridContainer")

[node name="Label" type="Label" parent="HBoxContainer/PlayerItems"]
layout_mode = 2
text = "Player Items"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PlayerItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PlayerItems/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PlayerItems/ScrollContainer/MarginContainer" node_paths=PackedStringArray("item_display_container")]
layout_mode = 2
columns = 2
script = ExtResource("3_odqjv")
item_display_container = NodePath(".")
source_whitelist = [NodePath("../../../../TransactionContainer/TransactionLayout/ScrollContainer/MarginContainer/HBoxContainer/SellItems")]

[node name="TransactionContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 10

[node name="TransactionLayout" type="VBoxContainer" parent="HBoxContainer/TransactionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/TransactionContainer/TransactionLayout"]
layout_mode = 2
text = "Items in transaction"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/TransactionContainer/TransactionLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/TransactionContainer/TransactionLayout/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TransactionContainer/TransactionLayout/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="SellItems" type="VBoxContainer" parent="HBoxContainer/TransactionContainer/TransactionLayout/ScrollContainer/MarginContainer/HBoxContainer" node_paths=PackedStringArray("item_display_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("3_odqjv")
item_display_container = NodePath(".")
source_whitelist = [NodePath("../../../../../../PlayerItems/ScrollContainer/MarginContainer/GridContainer")]

[node name="BuyItems" type="VBoxContainer" parent="HBoxContainer/TransactionContainer/TransactionLayout/ScrollContainer/MarginContainer/HBoxContainer" node_paths=PackedStringArray("item_display_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("3_odqjv")
item_display_container = NodePath(".")
source_whitelist = [NodePath("../../../../../../ShopItems")]

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/TransactionContainer/TransactionLayout"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="SellAmountLabel" type="Label" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "+10"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("4_vdbi3")

[node name="Control2" type="Control" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TradeAmountLabel" type="Label" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "+10"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("4_vdbi3")
expand_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyAmountLabel" type="Label" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "+10"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("4_vdbi3")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TransactionContainer/TransactionLayout"]
layout_mode = 2
alignment = 1

[node name="TradeButton" type="Button" parent="HBoxContainer/TransactionContainer/TransactionLayout/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.905092, 0.624817, 0.298797, 1)
layout_mode = 2
text = "TRADE"

[node name="ShopItems" type="VBoxContainer" parent="HBoxContainer" node_paths=PackedStringArray("item_display_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_odqjv")
item_display_container = NodePath(".")
source_whitelist = [NodePath("../TransactionContainer/TransactionLayout/ScrollContainer/MarginContainer/HBoxContainer/BuyItems")]

[node name="Label" type="Label" parent="HBoxContainer/ShopItems"]
layout_mode = 2
text = "Shop Items"
